# 05_kafka_distributed

./: README.md  docker-compose.yml  index.html  pyproject.toml
docker/: docker-compose.yml
src/: __init__.py
src/events/: base.py
src/producers/: kafka_producer.py
