[project]
name = "kafka-distributed"
version = "1.0.0"
description = "Event-driven architecture with Kafka"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Kafka
    "aiokafka>=0.10.0",
    "confluent-kafka>=2.3.0",
    
    # Serialization
    "orjson>=3.9.0",
    "avro-python3>=1.10.0",
    
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
